@@ -7,35 +7,41 @@ import agh.simulation.SimulationEngine;
 import agh.simulation.config.SimulationConfig;
 import agh.world.IMap;
 import javafx.application.Platform;
+import javafx.geometry.Insets;
+import javafx.geometry.Pos;
 import javafx.scene.Scene;
+import javafx.scene.control.Button;
+import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.StackPane;
+import javafx.scene.paint.Color;
+import javafx.scene.shape.Rectangle;
 import javafx.stage.Stage;
 
 import java.io.FileNotFoundException;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Timer;
-import java.util.TimerTask;
-import java.util.concurrent.ExecutionException;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class SimulationScene implements ISimulationChange {
     private final Stage stage;
     private final SimulationConfig simulationConfig;
     private final HashMap<StackPane, List<GuiElementBox>> mapping = new HashMap<>();
     private SimulationEngine simulationEngine;
+    private Animal chosenAnimal = null;
 
     public SimulationScene(SimulationConfig simulationConfig) {
         this.simulationConfig = simulationConfig;
         this.setup();
         this.stage = new Stage();
-        this.stage.setTitle("Darwin_Simulation");
+        this.stage.setTitle("GameOfLife_Simulation");
         this.stage.setMinWidth(WindowConstant.SIM_WIDTH);
         this.stage.setMinHeight(WindowConstant.SIM_HEIGHT);
 
-        GridPane userInterface = this.createUserInterface();
+        GridPane userInterface = this.createUserInterface(null);
         var map = this.simulationEngine.getMap();
         GridPane mapGrid = this.createMapGrid(map);
 
@@ -44,27 +50,11 @@ public class SimulationScene implements ISimulationChange {
         this.start();
     }
 
+
     private void start() {
-        this.simulationEngine.start();
+        this.simulationEngine.buttonClicked();
 
-
-    }
-
-    private void update() throws ExecutionException, InterruptedException {
-        Timer timer = new Timer();
-        timer.scheduleAtFixedRate(new TimerTask() {
-            @Override
-            public void run() {
-                Platform.runLater(() -> {
-                    GridPane userInterface = createUserInterface();
-                    // GridPane mapGrid = createMapGrid();
-
-                    //stage.setScene(new Scene(new HBox(userInterface, mapGrid)));
-                    stage.show();
-                });
-            }
-        }, 0, 500);
-        //this.update();
+        this.stage.setOnHiding((event) -> this.simulationEngine.stop());
     }
 
     private void setup() {
@@ -110,19 +100,49 @@ public class SimulationScene implements ISimulationChange {
                     } catch (FileNotFoundException ex) {
                         throw new RuntimeException(ex);
                     }
-                }).toList();
+                }).collect(Collectors.toList());
+
+                var anyAnimal = occupants.stream().filter(e -> e.mapObject instanceof Animal || e.mapObject == this.chosenAnimal).findFirst();
 
                 mapping.put(stacked, occupants);
                 stacked.setMaxHeight(40);
                 stacked.setMaxWidth(40);
 
+                stacked.setUserData(anyAnimal);
+
                 stacked.setOnMouseClicked(event -> {
                     System.out.println("clicked");
-                    var occupant = mapping.get(stacked).stream().filter(e -> e.mapObject instanceof Animal).findFirst();
-                    System.out.println(occupant.isPresent());
-                    occupant.ifPresent(guiElementBox -> this.simulationEngine.animalChosen((Animal) guiElementBox.mapObject));
+                    var src = event.getSource();
+                    if (src instanceof StackPane) {
+                        var casted = (StackPane) src;
+                        var objectsAtClick = (Optional<GuiElementBox>) casted.getUserData();
+
+                        System.out.println(objectsAtClick.isPresent());
+                        if (objectsAtClick.isPresent()) {
+                            var val = objectsAtClick.get();
+                            this.simulationEngine.animalChosen((Animal) val.mapObject);
+                        }
+                    }
                 });
+
+                anyAnimal.ifPresent(occupants::remove);
+
                 occupants.forEach(e -> stacked.getChildren().add(e.getImageView()));
+
+                // last added imageview is at front layer
+                anyAnimal.ifPresent(guiElementBox -> stacked.getChildren().add(guiElementBox.getImageView()));
+                if (anyAnimal.isPresent()) {
+                    var energyLabel = new Rectangle(WindowConstant.SPRITE_WIDTH, WindowConstant.SPRITE_HEIGHT * 1 / 5);
+                    energyLabel.setFill(((Animal) anyAnimal.get().mapObject).getLabelColor());
+                    stacked.getChildren().add(energyLabel);
+                    stacked.setAlignment(Pos.BOTTOM_CENTER);
+
+                    if (anyAnimal.get().mapObject == this.chosenAnimal) {
+                        var mark = new Rectangle(WindowConstant.SPRITE_WIDTH * 1 / 5, WindowConstant.SPRITE_HEIGHT*1/10);
+                        mark.setFill(Color.FLORALWHITE);
+                        stacked.getChildren().add(mark);
+                    }
+                }
 
                 grid.add(stacked, j, i);
             }
@@ -131,18 +151,62 @@ public class SimulationScene implements ISimulationChange {
         return grid;
     }
 
-    private GridPane createUserInterface() {
-        return new GridPane();
+    private GridPane createUserInterface(Animal chosenAnimal) {
+        var container = new GridPane();
+        container.setPadding(new Insets(20));
+        Button pauseButton = new Button("Pause");
+
+        pauseButton.setOnAction(click -> {
+            this.simulationEngine.buttonClicked();
+
+        });
+
+        var stats = simulationEngine.getStats();
+        container.add(pauseButton, 0, 0);
+        container.add(new Label("Animals: " + stats.getAmountOfAnimals()), 0, 1);
+        container.add(new Label("free spaces: " + stats.getAmountOfFreeSpaces()), 0, 2);
+        container.add(new Label("grasses: "+ stats.getAmountOfGrass()), 0, 3);
+        container.add(new Label("Average energy: " + stats.getAverageEnergy()), 0, 4);
+        container.add(new Label("Average dead age: "+ stats.getAverageAgeOfDeadAnimals()), 0, 5);
+        container.add(new Label("Most frequent genotype: "+ stats.getMostFrequentGenotype()), 0, 6);
+
+        if (chosenAnimal != null) {
+            this.chosenAnimal = chosenAnimal;
+            container.add(new Label("Chosen animal:"), 0, 7);
+            container.add(new Label("Genotype: " + chosenAnimal.getGenotype().toString()), 0, 8);
+            container.add(new Label("Current gene index: " + chosenAnimal.currentActiveGene()), 0, 9);
+            container.add(new Label("Energy: " + chosenAnimal.getEnergy()), 0, 10);
+            container.add(new Label("Grass eaten: " + chosenAnimal.getCountEatenGrass()), 0, 11);
+            container.add(new Label("Children amount: " + chosenAnimal.getChildrenAmount()), 0, 12);
+            if(chosenAnimal.isDead()) {
+                container.add(new Label("Died at: " + chosenAnimal.getAge()), 0, 13);
+            }
+        }
+
+        return container;
     }
+    public void saveToFile(){
+        var stats = simulationEngine.getStats();
+        CSVHandler file = simulationEngine.getFilehandler();
+        if (file.name!=null) {
+            file.saveStatisticsToFile(stats.getAmountOfAnimals(), stats.getAmountOfGrass(), stats.getAmountOfFreeSpaces(), stats.getAverageEnergy(),
+                    stats.getAverageAgeOfDeadAnimals(), stats.getMostFrequentGenotype());
+        }
+    }
+
     @Override
-    public synchronized void simulationChanged(IMap map) {
+    public synchronized void simulationChanged(IMap map, Animal chosenAnimal) {
         Platform.runLater(() -> {
-            GridPane userInterface = createUserInterface();
+            GridPane userInterface = createUserInterface(chosenAnimal);
             GridPane mapGrid = this.createMapGrid(map);
 
             stage.setScene(new Scene(new HBox(userInterface, mapGrid)));
             stage.show();
         });
+
+        if(this.simulationConfig.getParameter("filename").length() > 0);
+            saveToFile();
+
         System.out.println("notified");
     }
 
